--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -290,7 +290,7 @@
           </div>
           <div class="form-group">
             <label for="studio-description-input">Edit Studio Description</label>
-            <textarea class="form-control" rows="3"
+            <textarea class="form-control" id="studio-description-input" rows="3"
               maxlength="255">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</textarea>
           </div>
           <div class="form-group">
