--- a/lab5&6/hexed_about.html
+++ b/lab5&6/hexed_about.html
@@ -23,8 +23,8 @@
         provide feedback, or current issues.
       </p>
       <p>
-        <strong>Hexed</strong> currently only support clients on PC.
-        If you would like to stay updated for latest features, consider giving us a star.
+        <strong>Hexed</strong> currently only offers optimized feature for clients on PC.
+        Give us a star to stay updated for latest features.
       </p>
     </div>
   </body>
