--- a/lab5&6/hexed_instructions.html
+++ b/lab5&6/hexed_instructions.html
@@ -20,11 +20,11 @@
         <li>Navigate to "Play"</li>
         <li>Click "New Game"</li>
         <li>A randomly generated color swatch will show on the window, guess each R, G, and B value, either by a slider, or a 2-digit hex value</li>
-        <li>By default, you will have 3 guesses. Confugure number of guesses from 1-5 in Settings if you'd like</li>
-        <li>After each guess, the percentage-off for each R, G, and B will be displayed for improvements. Score will be updated based on performance</li>
+        <li>By default, you will have 3 guesses. Configure number of guesses from 1-5 in Settings if you'd like</li>
+        <li>After each guess, the percentage-off for each R, G, and B will be displayed for improvements, score will be updated.</li>
         <li>After each guess, press Continue to resume, timer will be stopped until Continue is pressed</li>
         <li>You will have 2 minutes for each game, pay attention to the timer and number of guesses left</li>
-        <li>When timer or number of guesses run out, game is finished and you'll see your score summary and answer</li>
+        <li>When timer reaches maxinum or number of guesses run out, game is finished and you'll see your score summary and answer</li>
       </ul>
     </div>
   </body>
