Added percentage functionality

--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -16,6 +16,7 @@
   </hr>
 
   <div id="box"></div>
+
   <div id="guesser">
     <div class="sliders">
       <div class="slidecontainer">
@@ -47,10 +48,10 @@
     </div>
   </div>
 
-  </section>
+  <button type="button" id="guessButton">Guess!</button>
+  <div id="percents"></div>
 
-  <script src="hexed.js">
-  </script>
+  <script src="hexed.js"></script>
 
   </body>
 </html>
