--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -17,40 +17,42 @@
 
   <div id="box"></div>
 
-  <div id="guesser">
-    <div class="sliders">
-      <div class="slidecontainer">
-        <p>R</p>
-        <input type="range" min="0" max="255" value="0" class="slider" id="Rrange">
-        <p id="Rdemo"></p>
+  <!-- <button id="startGame">Start</button> -->
+  <div id="gamePlay">
+    <div id="guesser">
+      <div class="sliders">
+        <div class="slidecontainer">
+          <p>R</p>
+          <input type="range" min="0" max="255" value="0" class="slider" id="Rrange">
+          <p id="Rdemo"></p>
+        </div>
+        <div class="slidecontainer">
+          <p>G</p>
+          <input type="range" min="0" max="255" value="0" class="slider" id="Grange">
+          <p id="Gdemo"></p>
+        </div>
+        <div class="slidecontainer">
+          <p>B</p>
+          <input type="range" min="0" max="255" value="0" class="slider" id="Brange">
+          <p id="Bdemo"></p>
+        </div>
       </div>
-      <div class="slidecontainer">
-        <p>G</p>
-        <input type="range" min="0" max="255" value="0" class="slider" id="Grange">
-        <p id="Gdemo"></p>
-      </div>
-      <div class="slidecontainer">
-        <p>B</p>
-        <input type="range" min="0" max="255" value="0" class="slider" id="Brange">
-        <p id="Bdemo"></p>
+      <div class="textboxes">
+        <div class="textbox">
+          <input type="text" placeholder="Input R Value" id="Rtext">
+        </div>
+        <div class="textbox">
+          <input type="text" placeholder="Input G Value" id="Gtext">
+        </div>
+        <div class="textbox">
+          <input type="text" placeholder="Input B Value" id="Btext">
+        </div>
       </div>
     </div>
-    <div class="textboxes">
-      <div class="textbox">
-        <input type="text" placeholder="Input R Value" id="Rtext">
-      </div>
-      <div class="textbox">
-        <input type="text" placeholder="Input G Value" id="Gtext">
-      </div>
-      <div class="textbox">
-        <input type="text" placeholder="Input B Value" id="Btext">
-      </div>
-    </div>
+  
+    <button type="button" id="guessButton">Guess!</button>
+    <div id="percents"></div>
   </div>
-
-  <button type="button" id="guessButton">Guess!</button>
-  <div id="percents"></div>
-
   <script src="hexed.js"></script>
 
   </body>
