--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -20,7 +20,7 @@
   <!-- <button id="startGame">Start</button> -->
   <div id="gamePlay">
     <div id="guesser">
-      <div class="sliders">
+      <!-- <div class="sliders">
         <div class="slidecontainer">
           <p>R</p>
           <input type="range" min="0" max="255" value="0" class="slider" id="Rrange">
@@ -47,13 +47,13 @@
         <div class="textbox">
           <input type="text" placeholder="Input B Value" id="Btext">
         </div>
-      </div>
+      </div> -->
     </div>
   
-    <button type="button" id="guessButton">Guess!</button>
-    <div id="percents"></div>
+    <!-- <button type="button" id="guessButton">Guess!</button>
+    <div id="percents"></div> -->
   </div>
-  <script src="hexed.js"></script>
+  <script src="hexed_plugin.js"></script>
 
   </body>
 </html>
