--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -15,10 +15,11 @@
     </ul>
   </hr>
 
-  <div id="box"></div>
-
-  <!-- <button id="startGame">Start</button> -->
+  <button id="startGame">Start</button>
   <div id="gamePlay">
+    <div id="colorSwatch">
+
+    </div>
     <div id="guesser">
       <!-- <div class="sliders">
         <div class="slidecontainer">
@@ -53,7 +54,9 @@
     <!-- <button type="button" id="guessButton">Guess!</button>
     <div id="percents"></div> -->
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="hexed_plugin.js"></script>
+  <!-- <script src="hexed.js" defer></script> -->
 
   </body>
 </html>
