--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>Welcome to Hexed!</title>
+    <script src="jquery-3.4.1.js"></script>
+    <script src="hexed1.js"></script>
+    <script src="hexed2.js"></script>
     <link rel="stylesheet" href="hexed.css"/>
   </head>
+
   <body>
     <h1 id="header">Hexed</h1>
     <hr>
@@ -15,48 +19,7 @@
     </ul>
   </hr>
 
-  <button id="startGame">Start</button>
-  <div id="gamePlay">
-    <div id="colorSwatch">
-
-    </div>
-    <div id="guesser">
-      <!-- <div class="sliders">
-        <div class="slidecontainer">
-          <p>R</p>
-          <input type="range" min="0" max="255" value="0" class="slider" id="Rrange">
-          <p id="Rdemo"></p>
-        </div>
-        <div class="slidecontainer">
-          <p>G</p>
-          <input type="range" min="0" max="255" value="0" class="slider" id="Grange">
-          <p id="Gdemo"></p>
-        </div>
-        <div class="slidecontainer">
-          <p>B</p>
-          <input type="range" min="0" max="255" value="0" class="slider" id="Brange">
-          <p id="Bdemo"></p>
-        </div>
-      </div>
-      <div class="textboxes">
-        <div class="textbox">
-          <input type="text" placeholder="Input R Value" id="Rtext">
-        </div>
-        <div class="textbox">
-          <input type="text" placeholder="Input G Value" id="Gtext">
-        </div>
-        <div class="textbox">
-          <input type="text" placeholder="Input B Value" id="Btext">
-        </div>
-      </div> -->
-    </div>
-  
-    <!-- <button type="button" id="guessButton">Guess!</button>
-    <div id="percents"></div> -->
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="hexed_plugin.js"></script>
-  <!-- <script src="hexed.js" defer></script> -->
+  <div id="game"></div>
 
   </body>
 </html>
