added jquery UI  reference included only in game.html

--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -5,6 +5,8 @@
     <script src="jquery-3.4.1.js"></script>
     <script src="hexed1.js"></script>
     <script src="hexed2.js"></script>
+    <script src="../jquery-ui-1.12.1/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+    <link rel="stylesheet" href="../jquery-ui-1.12.1/jquery-ui-1.12.1.custom/jquery-ui.css">
     <link rel="stylesheet" href="hexed.css"/>
   </head>
 
