--- a/lab5&6/hexed_about.html
+++ b/lab5&6/hexed_about.html
@@ -7,13 +7,14 @@
   <body>
     <h1 id="header">Hexed</h1>
     <hr>
-    <ul id="navbar">
-      <li><a href="hexed_home.html">Home</a></li>
-      <li><a href="hexed_instructions.html">Instructions</a></li>
-      <li><a href="hexed_game.html">Play</a></li>
-      <li><a href="hexed_about.html">About</a></li>
-    </ul>
-    <hr>
+    <div id="navbarcontainer">
+      <ul id="navbar">
+        <li><a href="hexed_home.html">Home</a></li>
+        <li><a href="hexed_instructions.html">Instructions</a></li>
+        <li><a href="hexed_game.html">Play</a></li>
+        <li><a class="active" href="hexed_about.html">About</a></li>
+      </ul>
+    </div>
     <div class="about">
       <p>
         <strong>Hexed</strong> is delivered by <i>Virginia Barnes</i>, <i>Gabriel Wild</i>, <i>Derek Li</i>, <i>TJ Samuels</i>, and <i>Zehao Qin</i>.
