--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -13,13 +13,14 @@
   <body>
     <h1 id="header">Hexed</h1>
     <hr>
-    <ul id="navbar">
-      <li><a href="hexed_home.html">Home</a></li>
-      <li><a href="hexed_instructions.html">Instructions</a></li>
-      <li><a href="hexed_game.html">Play</a></li>
-      <li><a href="hexed_about.html">About</a></li>
-    </ul>
-  </hr>
+    <div id="navbarcontainer">
+      <ul id="navbar">
+        <li><a href="hexed_home.html">Home</a></li>
+        <li><a href="hexed_instructions.html">Instructions</a></li>
+        <li><a class="active" href="hexed_game.html">Play</a></li>
+        <li><a href="hexed_about.html">About</a></li>
+      </ul>
+    </div>
 
   <div id="game"></div>
 
