--- a/lab5&6/hexed_home.html
+++ b/lab5&6/hexed_home.html
@@ -7,13 +7,14 @@
   <body>
     <h1 id="header">Hexed</h1>
     <hr>
-    <ul id="navbar">
-      <li><a href="hexed_home.html">Home</a></li>
-      <li><a href="hexed_instructions.html">Instructions</a></li>
-      <li><a href="hexed_game.html">Play</a></li>
-      <li><a href="hexed_about.html">About</a></li>
-    </ul>
-    <hr>
+    <div id="navbarcontainer">
+      <ul id="navbar">
+        <li><a class="active" href="hexed_home.html">Home</a></li>
+        <li><a href="hexed_instructions.html">Instructions</a></li>
+        <li><a href="hexed_game.html">Play</a></li>
+        <li><a href="hexed_about.html">About</a></li>
+      </ul>
+    </div>
     <div class="intro">
       <p>
         Hexed is a web-browser game that randomly generates a color swatch for players to guess the R, G, and B color code in hexidecimal.
