jQuery UI sliders work now

--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -3,10 +3,12 @@
   <head>
     <title>Welcome to Hexed!</title>
     <script src="jquery-3.4.1.js"></script>
+    <script src="jquery-ui-1.12.1/jquery-ui.js"></script>
+    <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
+    <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="hexed1.js"></script>
     <script src="hexed2.js"></script>
-    <script src="jquery-ui-1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="jquery-ui-1.12.1/jquery-ui.css">
     <link rel="stylesheet" href="hexed.css"/>
   </head>
 
