--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to Hexed!</title>
-    <script src="jquery-3.4.1.js"></script>
-    <script src="jquery-ui-1.12.1/jquery-ui.js"></script>
-    <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
-    <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script src="hexed1.js"></script>
-    <script src="hexed2.js"></script>
-    <link rel="stylesheet" href="hexed.css"/>
-  </head>
+<html lang="en-us">
 
-  <body>
-    <embed src="background_music.mp3" loop="true" hidden="true" autostart="true"></embed>
-    <h1 id="header">Hexed</h1>
-    <hr>
-    <div id="navbarcontainer">
-      <ul id="navbar">
-        <li><a href="hexed_home.html">Home</a></li>
-        <li><a href="hexed_instructions.html">Instructions</a></li>
-        <li><a class="active" href="hexed_game.html">Play</a></li>
-        <li><a href="hexed_about.html">About</a></li>
-      </ul>
-    </div>
+<head>
+  <meta charset="utf-8" content="text/html">
+  <title>Welcome to Hexed!</title>
+  <script src="jquery-3.4.1.js"></script>
+  <script src="jquery-ui-1.12.1/jquery-ui.js"></script>
+  <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+  <link rel="stylesheet" href="hexed.css" />
+</head>
+
+<body>
+  <embed src="background_music.mp3" loop="true" hidden="true" autostart="true"></embed>
+  <h1 id="header">Hexed</h1>
+  <hr>
+  <div id="navbarcontainer">
+    <ul id="navbar">
+      <li><a href="hexed_home.html">Home</a></li>
+      <li><a href="hexed_instructions.html">Instructions</a></li>
+      <li><a class="active" href="hexed_game.html">Play</a></li>
+      <li><a href="hexed_about.html">About</a></li>
+    </ul>
+  </div>
 
   <div id="game"></div>
 
-  </body>
+
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script src="hexed1.js"></script>
+  <script src="hexed2.js"></script>
+  <script src="webstorage.js"></script>
+</body>
+
 </html>
