--- a/lab5&6/hexed_home.html
+++ b/lab5&6/hexed_home.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to Hexed!</title>
-    <link rel="stylesheet" href="hexed.css"/>
-  </head>
-  <body>
-    <h1 id="header">Hexed</h1>
-    <hr>
-    <div id="navbarcontainer">
-      <ul id="navbar">
-        <li><a class="active" href="hexed_home.html">Home</a></li>
-        <li><a href="hexed_instructions.html">Instructions</a></li>
-        <li><a href="hexed_game.html">Play</a></li>
-        <li><a href="hexed_about.html">About</a></li>
-      </ul>
-    </div>
-    <div class="intro">
-      <p>
-        Hexed is a web-browser game that randomly generates a color swatch for players to guess the R, G, and B color code in hexidecimal.
-      </p>
-      <p>
-        Wanna see how many guesses it takes you to find out the closest RGB value of a color? <a href="hexed_game.html">Try it out</a>!
-      </p>
-    </div>
-  </body>
+<html lang='en-us'>
+
+<head>
+  <meta charset="utf-8" content="text/html">
+  <title>Welcome to Hexed!</title>
+  <link rel="stylesheet" href="hexed.css" />
+</head>
+
+<body>
+  <h1 id="header">Hexed</h1>
+  <hr>
+  <div id="navbarcontainer">
+    <ul id="navbar">
+      <li><a class="active" href="hexed_home.html">Home</a></li>
+      <li><a href="hexed_instructions.html">Instructions</a></li>
+      <li><a href="hexed_game.html">Play</a></li>
+      <li><a href="hexed_about.html">About</a></li>
+    </ul>
+  </div>
+  <div class="intro">
+    <p>
+      Hexed is a web-browser game that randomly generates a color swatch for players to guess the R, G, and B color code
+      in hexidecimal.
+    </p>
+    <p>
+      Wanna see how many guesses it takes you to find out the closest RGB value of a color? <a
+        href="hexed_game.html">Try it out</a>!
+    </p>
+  </div>
+</body>
+
 </html>
