--- a/freebee/web-client-master/index.html
+++ b/freebee/web-client-master/index.html
@@ -25,6 +25,7 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
 	<title>Free Bee</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
 </head>
 
 <body>
@@ -134,8 +135,7 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 	<hr />
 	<p id="footer">Free Bee is brought to you by Studio Urban Homestead | OpenBSD httpd</p>
 
-	<script type="text/javascript" src="script.js">
-	</script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 
