converted letter images to strings

--- a/freebee/web-client-master/index.html
+++ b/freebee/web-client-master/index.html
@@ -24,6 +24,7 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 	<link rel="shortcut icon" type="image/png" href="../favicon.png" />
 
 	<title>Free Bee</title>
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -52,10 +53,9 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 					src="comb-inv.png">
 			</div>
 			<div id="playfield-fg">
-				<img id="play1" class="fg" width="60" height="100"><img id="play2" class="fg" width="60"
-					height="100"><img id="play3" class="fg" width="60" height="100"><img id="play4" class="fg"
-					width="60" height="100"><img id="play5" class="fg" width="60" height="100"><img id="play6"
-					class="fg" width="60" height="100"><img id="play7" class="fg" width="60" height="100">
+				<p id="play1" class="fg"></p><p id="play2" class="fg"></p><p id="play3" class="fg"></p>
+        <p id="play4" class="fg"></p><p id="play5" class="fg"></p><p id="play6" class="fg"></p>
+        <p id="play7" class="fg"></p>
 			</div>
 		</div>
 	</div>
