finished implementing the webstorage api

--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -8,6 +8,10 @@
   <script src="jquery-ui-1.12.1/jquery-ui.js"></script>
   <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
   <link rel="stylesheet" href="hexed.css" />
+  <script src="https://code.jquery.com/jquery-1.10.2.js" defer></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js" defer></script>
+  <script src="hexed1.js" defer></script>
+  <script src="hexed2.js" defer></script>
 </head>
 
 <body>
@@ -24,13 +28,6 @@
   </div>
 
   <div id="game"></div>
-
-
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-  <script src="hexed1.js"></script>
-  <script src="hexed2.js"></script>
-  <script src="webstorage.js"></script>
 </body>
 
 </html>
