--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <embed src="background_music.mp3" loop="true" hidden="true" autostart="true"></embed>
+  <audio autoplay src="background_music.mp3" loop="true" hidden="true"></audio>
   <h1 id="header">Hexed</h1>
   <hr>
   <div id="navbarcontainer">
