--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -12,6 +12,9 @@
   <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js" defer></script>
   <script src="hexed1.js" defer></script>
   <script src="hexed2.js" defer></script>
+  <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
 </head>
 
 <body>
