--- a/lab5&6/hexed_home.html
+++ b/lab5&6/hexed_home.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" content="text/html">
   <title>Welcome to Hexed!</title>
   <link rel="stylesheet" href="hexed.css" />
+  <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
 </head>
 
 <body>
