--- a/lab5&6/hexed_instructions.html
+++ b/lab5&6/hexed_instructions.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" content="text/html">
   <title>Hexed Instructions</title>
   <link rel="stylesheet" href="hexed.css" />
+  <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
 </head>
 
 <body>
