Added play/pause background music button

--- a/lab5&6/hexed_game.html
+++ b/lab5&6/hexed_game.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <audio autoplay src="background_music.mp3" loop="true" hidden="true"></audio>
+  <audio autoplay id="backgroundmusic" src="background_music.mp3" loop="true" hidden="true"></audio>
   <h1 id="header">Hexed</h1>
   <hr>
   <div id="navbarcontainer">
