added some colors to buttons/links relocated timer and numguesses

--- a/lab5&6/hexed_about.html
+++ b/lab5&6/hexed_about.html
@@ -27,7 +27,7 @@
         Samuels</i>, and <i>Zehao Qin</i>.
     </p>
     <p>
-      Please navigate to our <a href="https://github.com/barnesv17/WebSys/tree/master/lab5%266">Github repository</a> if
+      Please navigate to our <a id="Link" href="https://github.com/barnesv17/WebSys/tree/master/lab5%266">Github repository</a> if
       you would like to contribute,
       provide feedback, or current issues.
     </p>
