--- a/lab5&6/hexed_home.html
+++ b/lab5&6/hexed_home.html
@@ -27,8 +27,8 @@
       in hexidecimal.
     </p>
     <p>
-      Wanna see how many guesses it takes you to find out the closest RGB value of a color? <a
-        href="hexed_game.html">Try it out</a>!
+      Wanna see how many guesses it takes you to find out the closest RGB value of a color? <a id="Link"
+        href="hexed_game.html">Try it out!</a>
     </p>
   </div>
 </body>
