--- a/lab5&6/hexed_instructions.html
+++ b/lab5&6/hexed_instructions.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" content="text/html">
   <title>Hexed Instructions</title>
   <link rel="stylesheet" href="hexed.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sriracha" rel="stylesheet">
   <link rel="icon" 
       type="image/png" 
       href="favicon.png">
