--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
   <link rel="stylesheet" href="assets/css/Homepage.css">
   <link rel="stylesheet" href="assets/css/Login.css">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
 <body>
