--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -88,7 +88,7 @@
         <h2>Your Studios</h2>
         <p class="btn btn-light action-button addStudio">New Studio</p>
       </div>
-      <a class="studio" href="studio.html">
+      <a class="studio" href="studio.php">
         <div class="studioTitle text-left">Studio 1</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a
           blurb like blah blah blah or something. You can write your own description if you want.</p>
@@ -97,7 +97,7 @@
           <p class="btn btn-light action-button genres">Pop</p>
         </div>
       </a>
-      <a class="studio" href="studio.html">
+      <a class="studio" href="studio.php">
         <div class="studioTitle text-left">Studio 2</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a
           blurb like blah blah blah or something. You can write your own description if you want.</p>
@@ -105,7 +105,7 @@
           <p class="btn btn-light action-button genres">Classical</p>
         </div>
       </a>
-      <a class="studio" href="studio.html">
+      <a class="studio" href="studio.php">
         <div class="studioTitle text-left">Studio 3</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a
           blurb like blah blah blah or something. You can write your own description if you want.</p>
