--- a/JamSesh/homepage.html
+++ b/JamSesh/homepage.html
@@ -43,7 +43,7 @@
           <div class="form-group" id="confirmPassword"><input class="form-control" type="password"
               name="password-repeat" placeholder="Password (repeat)"></div>
           <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit"
-              href="user-profile.html" href="user-profile.html">Sign Up</a></div>
+              href="user-profile.php" href="user-profile.php">Sign Up</a></div>
           <a class="already" href="login.html">You already have an account? Login here.</a>
         </form>
       </div>
