--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -37,7 +37,7 @@
           <div class="form-group" id="password"><input class="form-control" type="password" name="password"
               placeholder="Password"></div>
           <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit"
-              href="user-profile.html">Log In</a></div>
+              href="user-profile.php">Log In</a></div>
         </form>
       </div>
     </section>
