Adds user to db when they register

--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -15,14 +15,14 @@
   <!-- Try and remove the style from the line below -->
   <div class="top" data-bs-parallax-bg="true" style="background: url(&quot;assets/img/teal.png&quot;);">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-      <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
+      <div class="container"><a class="navbar-brand" href="homepage.php">JamSesh</a>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav mr-auto">
             <!-- <li class="nav-item"><a class="nav-link active" href="homepage.html">Home</a></li> -->
           </ul>
           <span class="navbar-text actions">
             <a class="login" href="#">Log In</a>
-            <a class="btn btn-light action-button" role="button" href="homepage.html">Sign Up</a>
+            <a class="btn btn-light action-button" role="button" href="homepage.php">Sign Up</a>
           </span>
         </div>
       </div>
